Agregado footer full responsiva en todas las páginas del sitio

--- a/pages/empanadas.html
+++ b/pages/empanadas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Boootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -10,6 +11,7 @@
     <title>Nuestras empanadas</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
@@ -36,6 +38,7 @@
             </div>
         </nav>
     </header>
+    <!-- Fin del Header -->
 
 
 
@@ -52,7 +55,28 @@
 
 
 
-
+    <!-- Footer -->
+    <footer class="text-center text-lg-start">
+        <div class="container d-flex justify-content-center py-4">
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <a href="https://www.instagram.com/matilde.empanadas/"><i class="fab fa-instagram"></i></a>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+            </button>
+        </div>
+        <div class="text-center p-1">
+            Matilde® Calle 8 Nº 973 <br>
+            La Plata, Buenos Aires
+        </div>
+    </footer>
+    <!-- Fin del Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
