--- a/pages/empanadas.html
+++ b/pages/empanadas.html
@@ -39,9 +39,63 @@
         </nav>
     </header>
     <!-- Fin del Header -->
+    
+    
+    <main>
+        <h2 id="nuestros-sabores">Nuestros sabores</h2>
+        <div class="galeria">
+            <div class="carta">
+                <p>Berenjena</p>
+                <div class="item item1"></div>
+                <p>Berenjena con sarasa ssasas s asa as s a</p>
+            </div>
+            <div class="carta">
+                <p>Bondiola a la cerveza negra</p>
+                <div class="item item2"></div>
+            </div>
+            <div class="carta">
+                <p>Calabaza</p>
+                <div class="item item3"></div>
+            </div>
+            <div class="carta">
+                <p>Caprese</p>
+                <div class="item item4"></div>
+            </div>
+            <div class="carta">
+                <p>Carne al malbec</p>
+                <div class="item item5"></div>
+            </div>
+            <div class="carta">
+                <p>Carne con morrones</p>
+                <div class="item item6"></div>
+            </div>
+            <div class="carta">
+                <p>Humita</p>
+                <div class="item item7"></div>
+            </div>
+            <div class="carta">
+                <p>Jamón y Queso</p>
+                <div class="item item8"></div>
+            </div>
+            <div class="carta">
+                <p>Pirok</p>
+                <div class="item item9"></div>
+            </div>
+            <div class="carta">
+                <p>Pollo, verdeo y roquefort</p>
+                <div class="item item10"></div>
+            </div>
+            <div class="carta">
+                <p>Roquefort y cebolla</p>
+                <div class="item item11"></div>
+            </div>
+            <div class="carta">
+                <p>Teriyaki</p>
+                <div class="item item12"></div>
+            </div>
 
-
-
+        </div>
+    </main>
 
 
 
