Desarrollada la homepage full responsiva

--- a/pages/empanadas.html
+++ b/pages/empanadas.html
@@ -45,68 +45,56 @@
         <h2 id="nuestros-sabores">Nuestros sabores</h2>
         <div class="galeria">
             <div class="carta">
-                <p>Berenjena</p>
+                <h4>Berenjena</h4>
                 <div class="item item1"></div>
-                <p>Berenjena con sarasa ssasas s asa as s a</p>
             </div>
             <div class="carta">
-                <p>Bondiola a la cerveza negra</p>
+                <h4>Bondiola a la cerveza negra</h4>
                 <div class="item item2"></div>
             </div>
             <div class="carta">
-                <p>Calabaza</p>
+                <h4>Calabaza</h4>
                 <div class="item item3"></div>
             </div>
             <div class="carta">
-                <p>Caprese</p>
+                <h4>Caprese</h4>
                 <div class="item item4"></div>
             </div>
             <div class="carta">
-                <p>Carne al malbec</p>
+                <h4>Carne al malbec</h4>
                 <div class="item item5"></div>
             </div>
             <div class="carta">
-                <p>Carne con morrones</p>
+                <h4>Carne con morrones</h4>
                 <div class="item item6"></div>
             </div>
             <div class="carta">
-                <p>Humita</p>
+                <h4>Humita</h4>
                 <div class="item item7"></div>
             </div>
             <div class="carta">
-                <p>Jamón y Queso</p>
+                <h4>Jamón y Queso</h4>
                 <div class="item item8"></div>
             </div>
             <div class="carta">
-                <p>Pirok</p>
+                <h4>Pirok</h4>
                 <div class="item item9"></div>
             </div>
             <div class="carta">
-                <p>Pollo, verdeo y roquefort</p>
+                <h4>Pollo, verdeo y roquefort</h4>
                 <div class="item item10"></div>
             </div>
             <div class="carta">
-                <p>Roquefort y cebolla</p>
+                <h4>Roquefort y cebolla</h4>
                 <div class="item item11"></div>
             </div>
             <div class="carta">
-                <p>Teriyaki</p>
+                <h4>Teriyaki</h4>
                 <div class="item item12"></div>
             </div>
 
         </div>
     </main>
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Footer -->
