Desarrollada la página nietos.html full responsiva

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-4">
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.instagram.com/matilde.empanadas/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/matilde.empanadas/" target="_blank"><i class="fab fa-instagram"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </button>
         </div>
         <div class="text-center p-1">
