--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,36 +40,56 @@
     </header>
     <!-- Fin del Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <main class="contacto">
+        <div class="serparte">
+            <h1>Querés ser parte de <span>Matilde</span>?</h1>
+            <h2>Unite a la revolución de las empanadas!</h2>
+            <p><span>Matilde</span> siempre está en búsqueda de chicos y chicas que quieran ayudarla a cocinar sus riquísimas empanadas! Si tenés experiencia en gastronomía y vivís en La Plata, dejanos tus datos  a continuación y adjuntanos tu CV, o envianoslo por correo a rhumanos.gastronomia@gmail.com. Te esperamos!</p>
+        </div>
+        <form action="/action_page.php" class="was-validated"></form>
+            <div class="form-floating mb-3 mt-3">
+                <input type="text" class="form-control" id="name" placeholder="Nombre" name="name">
+                <label for="name">Nombre</label>
+            </div>
+            <div class="form-floating mt-3 mb-3">
+                <input type="text" class="form-control" id="lname" placeholder="Apellido" name="lname">
+                <label for="lname">Apellido</label>
+            </div>
+            <div class="form-floating mt-3 mb-3">
+                <input type="date" class="form-control" id="birth" placeholder="Fecha de nacimiento" name="birth">
+                <label for="birth">Fecha de nacimiento</label>
+            </div>
+            <div class="form-floating mt-3 mb-3">
+                <input type="email" class="form-control" id="email" placeholder="Correo electrónico" name="email">
+                <label for="email">Correo electrónico</label>
+            </div>
+            <div class="form-floating mt-3 mb-3">
+                <input type="number" class="form-control" id="phone" placeholder="Nº de teléfono" name="phone">
+                <label for="phone">Nº de teléfono</label>
+            </div>
+            <div class="form-floating mt-3 mb-3">
+                <input type="text" class="form-control" id="adress" placeholder="Domicilio" name="adress">
+                <label for="adress">Domicilio</label>
+            </div>
+            <button type="button" class="btn btn-primary" id="contactbtncv">Adjuntar CV</button>
+            <button type="submit" class="btn btn-primary" id="contactbtn">Enviar</button>
+        </form>
+    </main>
 
     <!-- Footer -->
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-4">
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.instagram.com/matilde.empanadas/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/matilde.empanadas/" target="_blank"><i class="fab fa-instagram"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </button>
         </div>
         <div class="text-center p-1">
