--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -40,7 +40,25 @@
     </header>
     <!-- Fin del Header -->
 
-
+    <!-- Main -->
+    <main class="delivery">
+        <div class="deliverymain">
+            <img src="../img/radio.png" alt="Radio de delivery" height="700px">
+            <h1>Nuestros horarios de delivery</h1>
+            <h2>Martes a Domingos</h2>
+            <h3>Mediodía</h3>
+            <p>11.00 a 15.00hs</p><br>
+            <h3>Noche</h3>
+            <p>19.30 a 00.00hs</p>
+        </div>    
+        <div class="deliverybot">
+            <a id="fudo" href="https://menu.fu.do/matilde" target="_blank"><img src="../img/fudo.png" alt=""></a>
+            <a id="pedidosya" href="https://www.pedidosya.com.ar/restaurantes/la-plata/matilde-empanadas-al-disco-menu" target="_blank"><img src="../img/PedidosYa.png" alt=""></a>
+            <a id="whatsapp" href="https://wa.me/2216419976" target="_blank"><img src="../img/wpp.png" alt=""></a>
+        </div>
+        <img id="deliverylogo" src="../img/logonegro.png" alt="Logo" height="100px">
+    </main>
+    <!-- Fin del main -->
 
 
 
@@ -63,16 +81,16 @@
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-4">
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.instagram.com/matilde.empanadas/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/matilde.empanadas/" target="_blank"><i class="fab fa-instagram"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </button>
         </div>
         <div class="text-center p-1">
