--- a/pages/nietos.html
+++ b/pages/nietos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Nietos</title>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -40,38 +41,54 @@
     </header>
     <!-- Fin del Header -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Main -->
+    <main class="mainnietos">
+        <h1>Cada vez son más y más los nietos de Matilde!</h1>
+        <div class="container-fluid mt-5">
+            <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner w-100">
+                    <div class="carousel-item active">
+                        <img src="../img/review1.png" class="d-block w-100 img-fluid" alt="Image 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/review2.png" class="d-block w-100 img-fluid" alt="Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/review3.png" class="d-block w-100 img-fluid" alt="Image 3">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="gotodelivery">
+            <h2>Y vos que esperás? pedite ya unas ricas empanadas al disco!</h2>
+            <a href="../pages/delivery.html">Hacé tu pedido!<i class="fa-solid fa-cart-shopping fa-bounce"></i></a>
+        </div>
+    </main>
+    <!-- Fin del main -->
 
 
     <!-- Footer -->
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-4">
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.instagram.com/matilde.empanadas/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/matilde.empanadas/" target="_blank"><i class="fab fa-instagram"></i></a>
             </button>
             <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
-                <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </button>
         </div>
         <div class="text-center p-1">
