Desarrollada la página delivery.html full responsiva

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,7 +44,7 @@
         <div class="serparte">
             <h1>Querés ser parte de <span>Matilde</span>?</h1>
             <h2>Unite a la revolución de las empanadas!</h2>
-            <p><span>Matilde</span> siempre está en búsqueda de chicos y chicas que quieran ayudarla a cocinar sus riquísimas empanadas! Si tenés experiencia en gastronomía y vivís en La Plata, dejanos tus datos  a continuación y adjuntanos tu CV, o envianoslo por correo a rhumanos.gastronomia@gmail.com. Te esperamos!</p>
+            <p><span>Matilde</span> siempre está en búsqueda de chicos y chicas que quieran ayudarla a cocinar sus riquísimas empanadas! Si tenés experiencia en gastronomía y vivís en La Plata, dejanos tus datos  a continuación, o envianos tu CV por correo a rhumanos.gastronomia@gmail.com. Te esperamos!</p>
         </div>
         <form action="/action_page.php" class="was-validated"></form>
             <div class="form-floating mb-3 mt-3">
@@ -71,7 +71,6 @@
                 <input type="text" class="form-control" id="adress" placeholder="Domicilio" name="adress">
                 <label for="adress">Domicilio</label>
             </div>
-            <button type="button" class="btn btn-primary" id="contactbtncv">Adjuntar CV</button>
             <button type="submit" class="btn btn-primary" id="contactbtn">Enviar</button>
         </form>
     </main>
