--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Boootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Matilde</title>
 </head>
 <body>
@@ -15,23 +15,23 @@
     <header>
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Matilde"     height="100px"></a>
+                <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="Matilde"     height="100px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/empanadas.html">Sabores</a>
+                            <a class="nav-link" href="./pages/empanadas.html">Sabores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/nietos.html">Nietitos</a>
+                            <a class="nav-link" href="./pages/nietos.html">Nietitos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item" id="delivery">
-                            <a class="nav-link" href="/pages/delivery.html">Delivery</a>
+                            <a class="nav-link" href="./pages/delivery.html">Delivery</a>
                         </li>
                     </ul>
                 </div>
@@ -46,7 +46,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="/img/imgp1.jpg" height="700px" class="img-thumbnail">
+                    <img src="./img/imgp1.jpg" height="700px" class="img-thumbnail">
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12">
                     <h3>Las mejores empanadas de La Plata!</h3>
@@ -59,7 +59,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorum? Id debitis quaerat totam praesentium eaque nihil dolorem similique vel soluta? Explicabo eveniet repudiandae ratione vitae optio beatae deserunt, tempora quasi fugiat dolor pariatur ipsa earum provident, perspiciatis voluptates, at blanditiis. Facere quaerat quia voluptates autem, illo cum. Ab iure dolor culpa et itaque, atque, nesciunt laborum aliquid sed porro ratione exercitationem ipsa. Odit, dicta eius ullam nam cupiditate amet, molestias libero beatae repellat optio harum dolor cumque nisi exercitationem vero earum iste! Soluta, officia voluptatem illo eius sint officiis consequuntur deserunt, tenetur eos explicabo incidunt quasi voluptate maxime corporis!</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="img/imgp2.jpg" height="700px" class="img-thumbnail">
+                    <img src="./img/imgp2.jpg" height="700px" class="img-thumbnail">
                 </div>
             </div>
         </div>
