--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -42,39 +42,36 @@
 
     <!-- Main -->
     <main class="delivery">
-        <div class="deliverymain">
-            <img src="../img/radio.png" alt="Radio de delivery" height="700px">
-            <h1>Nuestros horarios de delivery</h1>
-            <h2>Martes a Domingos</h2>
-            <h3>Mediodía</h3>
-            <p>11.00 a 15.00hs</p><br>
-            <h3>Noche</h3>
-            <p>19.30 a 00.00hs</p>
-        </div>    
-        <div class="deliverybot">
-            <a id="fudo" href="https://menu.fu.do/matilde" target="_blank"><img src="../img/fudo.png" alt=""></a>
-            <a id="pedidosya" href="https://www.pedidosya.com.ar/restaurantes/la-plata/matilde-empanadas-al-disco-menu" target="_blank"><img src="../img/PedidosYa.png" alt=""></a>
-            <a id="whatsapp" href="https://wa.me/2216419976" target="_blank"><img src="../img/wpp.png" alt=""></a>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12" id="leftcol">
+                    <img id="imgdelivery" src="../img/radio.png" alt="Radio de delivery">
+                </div>
+                <div class="col-lg-8 col-md-6 col-sm-12">
+                    <h1>Nuestros horarios de delivery</h1>
+                    <h2>Martes a Domingos</h2>
+                    <h3>Mediodía</h3>
+                    <p>11.00 a 15.00hs</p><br>
+                    <h3>Noche</h3>
+                    <p>19.30 a 00.00hs</p>
+                    <div class="botonesylogo">
+                        <div class="deliverybot">
+                            <a id="fudo" href="https://menu.fu.do/matilde" target="_blank"><img src="../img/fudo.png" alt=""></a>
+                            <a id="pedidosya" href="https://www.pedidosya.com.ar/restaurantes/la-plata/matilde-empanadas-al-disco-menu" target="_blank"><img src="../img/PedidosYa.png" alt=""></a>
+                            <a id="whatsapp" href="https://wa.me/2216419976" target="_blank"><img src="../img/wpp.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12">
+                            <img id="deliverylogo" src="../img/logonegro.png" alt="Logo">
+                        </div>
+                    </div>    
+                </div>
+            </div>
+
         </div>
-        <img id="deliverylogo" src="../img/logonegro.png" alt="Logo" height="100px">
     </main>
     <!-- Fin del main -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Footer -->
