Adaptada la hoja de estilos a SCSS, con variables definidas para colores y fuentes utilizadas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,7 +46,7 @@
             <h2>Unite a la revolución de las empanadas!</h2>
             <p><span>Matilde</span> siempre está en búsqueda de chicos y chicas que quieran ayudarla a cocinar sus riquísimas empanadas! Si tenés experiencia en gastronomía y vivís en La Plata, dejanos tus datos  a continuación, o envianos tu CV por correo a rhumanos.gastronomia@gmail.com. Te esperamos!</p>
         </div>
-        <form action="/action_page.php" class="was-validated"></form>
+        <form class="was-validated">
             <div class="form-floating mb-3 mt-3">
                 <input type="text" class="form-control" id="name" placeholder="Nombre" name="name">
                 <label for="name">Nombre</label>
