--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="empanadas, relleno al disco, disco, vinito, la plata, delivery, contacto, CV, trabajo, gastronomía">
+    <meta name="description" content="Si tenés experiencia en gastronomía y querés ser parte de Matilde, contactanos!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Boootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -46,7 +48,7 @@
             <h2>Unite a la revolución de las empanadas!</h2>
             <p><span>Matilde</span> siempre está en búsqueda de chicos y chicas que quieran ayudarla a cocinar sus riquísimas empanadas! Si tenés experiencia en gastronomía y vivís en La Plata, dejanos tus datos  a continuación, o envianos tu CV por correo a rhumanos.gastronomia@gmail.com. Te esperamos!</p>
         </div>
-        <form action="/action_page.php" class="was-validated"></form>
+        <form class="was-validated">
             <div class="form-floating mb-3 mt-3">
                 <input type="text" class="form-control" id="name" placeholder="Nombre" name="name">
                 <label for="name">Nombre</label>
