Agregadas alts a las imágenes del sitio para mejorar el posicionamiento en el SEO

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="./img/imgp1.jpg" height="700px" class="img-thumbnail">
+                    <img src="./img/imgp1.jpg" alt="relleno al disco" height="700px" class="img-thumbnail">
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12">
-                    <h3>Las mejores empanadas de La Plata!</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit eos quaerat quod voluptatum officia consectetur animi debitis odit id dolorum. Veritatis iste quia unde nemo optio ea officia ullam? Perspiciatis, officia maxime amet tempora illo consequatur incidunt hic fuga quidem neque ab labore delectus cupiditate iste mollitia a non nulla quis sit, expedita eos repellendus quos nobis. Provident iusto cupiditate itaque eligendi nesciunt distinctio praesentium ipsam veniam? Fugit, illum cum, qui odio libero quisquam minus, ullam sit nam dicta delectus? Ratione, numquam velit! Neque, sed qui consequatur hic at maiores sapiente ratione suscipit iusto odit quis fugiat, accusantium dolor quas.</p>
+                    <h1>Las mejores empanadas de La Plata!</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, aadipisicing elit. Sit eos quaerat quod voluptatum officia consectetur animi debitis odit id dolorum. Veritatis iste quia unde nemo optio ea officia ullam? Perspiciatis, officia maxime amet tempora illo consequatur incidunt hic fuga quidem neque ab labore delectus cupiditate iste mollitia a non nulla quis sit, expedita eos repellendus quos nobis. Provident iusto cupiditate itaque eligendi nesciunt distinctio praesentium ipsam veniam? Fugit, illum cum, qui odio libero quisquam minus, ullam sit nam dicta delectus? Ratione, numquam velit! Neque, sed qui consequatur hic at maiores sapiente ratione suscipit iusto odit quis fugiat, accusantium dolor quas.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-12">
-                    <h3>Relleno al disco!? como es eso?</h3>
+                    <h2>Relleno al disco!? como es eso?</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorum? Id debitis quaerat totam praesentium eaque nihil dolorem similique vel soluta? Explicabo eveniet repudiandae ratione vitae optio beatae deserunt, tempora quasi fugiat dolor pariatur ipsa earum provident, perspiciatis voluptates, at blanditiis. Facere quaerat quia voluptates autem, illo cum. Ab iure dolor culpa et itaque, atque, nesciunt laborum aliquid sed porro ratione exercitationem ipsa. Odit, dicta eius ullam nam cupiditate amet, molestias libero beatae repellat optio harum dolor cumque nisi exercitationem vero earum iste! Soluta, officia voluptatem illo eius sint officiis consequuntur deserunt, tenetur eos explicabo incidunt quasi voluptate maxime corporis!</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="./img/imgp2.jpg" height="700px" class="img-thumbnail">
+                    <img src="./img/imgp2.jpg" alt="empanadas al disco" height="700px" class="img-thumbnail">
                 </div>
             </div>
         </div>
