--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -58,9 +58,9 @@
                     <p>19.30 a 00.00hs</p>
                     <div class="botonesylogo">
                         <div class="deliverybot">
-                            <a id="fudo" href="https://menu.fu.do/matilde" target="_blank"><img src="../img/fudo.png" alt=""></a>
-                            <a id="pedidosya" href="https://www.pedidosya.com.ar/restaurantes/la-plata/matilde-empanadas-al-disco-menu" target="_blank"><img src="../img/PedidosYa.png" alt=""></a>
-                            <a id="whatsapp" href="https://wa.me/2216419976" target="_blank"><img src="../img/wpp.png" alt=""></a>
+                            <a id="fudo" href="https://menu.fu.do/matilde" target="_blank"><img src="../img/fudo.png" alt="logo de fudo"></a>
+                            <a id="pedidosya" href="https://www.pedidosya.com.ar/restaurantes/la-plata/matilde-empanadas-al-disco-menu" target="_blank"><img src="../img/PedidosYa.png" alt="logo de pedidos ya"></a>
+                            <a id="whatsapp" href="https://wa.me/2216419976" target="_blank"><img src="../img/wpp.png" alt="logo de whatsapp"></a>
                         </div>
                     </div>
                     <div class="row">
