--- a/pages/nietos.html
+++ b/pages/nietos.html
@@ -51,13 +51,13 @@
             <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner w-100">
                     <div class="carousel-item active">
-                        <img src="../img/review1.png" class="d-block w-100 img-fluid" alt="Image 1">
+                        <img src="../img/review1.png" class="d-block w-100 img-fluid" alt="reseñas 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/review2.png" class="d-block w-100 img-fluid" alt="Image 2">
+                        <img src="../img/review2.png" class="d-block w-100 img-fluid" alt="reseñas 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/review3.png" class="d-block w-100 img-fluid" alt="Image 3">
+                        <img src="../img/review3.png" class="d-block w-100 img-fluid" alt="reseñas 3">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
