Homepage rediseñada full responsive. Corregido problema de display de la navbar en 576px+

--- a/index.html
+++ b/index.html
@@ -45,28 +45,23 @@
 
     <!-- Main -->
 
-    <main class="index">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="./img/imgp1.jpg" height="700px" class="img-thumbnail">
-                </div>
-                <div class="col-lg-8 col-md-8 col-sm-12">
-                    <h3>Las mejores empanadas de La Plata!</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit eos quaerat quod voluptatum officia consectetur animi debitis odit id dolorum. Veritatis iste quia unde nemo optio ea officia ullam? Perspiciatis, officia maxime amet tempora illo consequatur incidunt hic fuga quidem neque ab labore delectus cupiditate iste mollitia a non nulla quis sit, expedita eos repellendus quos nobis. Provident iusto cupiditate itaque eligendi nesciunt distinctio praesentium ipsam veniam? Fugit, illum cum, qui odio libero quisquam minus, ullam sit nam dicta delectus? Ratione, numquam velit! Neque, sed qui consequatur hic at maiores sapiente ratione suscipit iusto odit quis fugiat, accusantium dolor quas.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-12">
-                    <h3>Relleno al disco!? como es eso?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, dolorum? Id debitis quaerat totam praesentium eaque nihil dolorem similique vel soluta? Explicabo eveniet repudiandae ratione vitae optio beatae deserunt, tempora quasi fugiat dolor pariatur ipsa earum provident, perspiciatis voluptates, at blanditiis. Facere quaerat quia voluptates autem, illo cum. Ab iure dolor culpa et itaque, atque, nesciunt laborum aliquid sed porro ratione exercitationem ipsa. Odit, dicta eius ullam nam cupiditate amet, molestias libero beatae repellat optio harum dolor cumque nisi exercitationem vero earum iste! Soluta, officia voluptatem illo eius sint officiis consequuntur deserunt, tenetur eos explicabo incidunt quasi voluptate maxime corporis!</p>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                    <img src="./img/imgp2.jpg" height="700px" class="img-thumbnail">
-                </div>
-            </div>
+    <main>
+        <div class="indexa">
+            <h1>Estás listo para probar las empanadas más ricas de La Plata?</h1>
         </div>
-    </main>
+        <div class="indexb">
+            <h2>Cocinamos el relleno al disco</h2>
+            <p>Descubrí la perfección en cada bocado, consagradas como las mejores empanadas de la ciudad. Nuestro secreto radica en el relleno cocinado al disco, una vuelta de tuerca para esta maravilla de la gastronomía argentina, que resalta sabores y garantiza una experiencia única.</p>
+            <p>Desde alguno de nuestros rellenos con carne, como bondiola a la cerveza negra, pasando por la clásica de jamón y queso, o alguna de nuestras variedades de vegetales, como la calabaza cortada en cubos.</p>
+        </div>
+        <div class="indexc">
+            <h2>Una experiencia gourmet con un clásico argento!</h2>
+        </div>
+        <div class="indexd">
+            <h3>Pedite ahora mismo unas ricas empanadas de Matilde y probá nuestros deliciosos sabores! <br>Qué esperás?</h3>
+            <a href="../pages/delivery.html">Hacé tu pedido!<i class="fa-solid fa-cart-shopping fa-bounce"></i></a>
+        </div>
+    </main> 
 
 
     <!-- Fin del Main -->
