--- a/pages/empanadas.html
+++ b/pages/empanadas.html
@@ -47,52 +47,64 @@
         <h2 id="nuestros-sabores">Nuestros sabores</h2>
         <div class="galeria">
             <div class="carta">
-                <h4>Berenjena</h4>
+                <p>Berenjena</p>
                 <div class="item item1"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Bondiola a la cerveza negra</h4>
+                <p>Bondiola a la cerveza negra</p>
                 <div class="item item2"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Calabaza</h4>
+                <p>Calabaza</p>
                 <div class="item item3"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Caprese</h4>
+                <p>Caprese</p>
                 <div class="item item4"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Carne al malbec</h4>
+                <p>Carne al malbec</p>
                 <div class="item item5"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Carne con morrones</h4>
+                <p>Carne con morrones</p>
                 <div class="item item6"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Humita</h4>
+                <p>Humita</p>
                 <div class="item item7"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Jamón y Queso</h4>
+                <p>Jamón y Queso</p>
                 <div class="item item8"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Pirok</h4>
+                <p>Pirok</p>
                 <div class="item item9"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Pollo, verdeo y roquefort</h4>
+                <p>Pollo, verdeo y roquefort</p>
                 <div class="item item10"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Roquefort y cebolla</h4>
+                <p>Roquefort y cebolla</p>
                 <div class="item item11"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
             <div class="carta">
-                <h4>Teriyaki</h4>
+                <p>Teriyaki</p>
                 <div class="item item12"></div>
+                <a href="./delivery.html">Pedir</a>
             </div>
 
         </div>
