--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,6 @@
     <meta name="keywords" content="empanadas, relleno al disco, disco, vinito, la plata, delivery, contacto, CV, trabajo, gastronomía">
     <meta name="description" content="Si tenés experiencia en gastronomía y querés ser parte de Matilde, contactanos!">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Boootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -42,9 +41,10 @@
     </header>
     <!-- Fin del Header -->
 
+    <!-- Main -->
     <main class="contacto">
         <div class="serparte">
-            <h1>Querés ser parte de <span>Matilde</span>?</h1>
+            <h1>Querés ser parte de Matilde?</h1>
             <h2>Unite a la revolución de las empanadas!</h2>
             <p><span>Matilde</span> siempre está en búsqueda de chicos y chicas que quieran ayudarla a cocinar sus riquísimas empanadas! Si tenés experiencia en gastronomía y vivís en La Plata, dejanos tus datos  a continuación, o envianos tu CV por correo a rhumanos.gastronomia@gmail.com. Te esperamos!</p>
         </div>
@@ -76,7 +76,8 @@
             <button type="submit" class="btn btn-primary" id="contactbtn">Enviar</button>
         </form>
     </main>
-
+    <!-- Fin del main -->
+    
     <!-- Footer -->
     <footer class="text-center text-lg-start">
         <div class="container d-flex justify-content-center py-4">
