--- a/pages/empanadas.html
+++ b/pages/empanadas.html
@@ -6,7 +6,6 @@
     <meta name="keywords" content="empanadas, relleno al disco, disco, vinito, la plata, delivery, sabores, carta, menú, variedad de empanadas">
     <meta name="description" content="Elegí entre nuestras originales empanadas. Cual vas a saborear hoy?">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Boootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -42,7 +41,7 @@
     </header>
     <!-- Fin del Header -->
     
-    
+    <!-- Main -->
     <main>
         <h2 id="nuestros-sabores">Nuestros sabores</h2>
         <div class="galeria">
@@ -106,10 +105,9 @@
                 <div class="item item12"></div>
                 <a href="./delivery.html">Pedir</a>
             </div>
-
         </div>
     </main>
-
+    <!-- Fin del main -->
 
     <!-- Footer -->
     <footer class="text-center text-lg-start">
