--- a/pages/nietos.html
+++ b/pages/nietos.html
@@ -48,13 +48,34 @@
             <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner w-100">
                     <div class="carousel-item active">
-                        <img src="../img/review1.png" class="d-block w-100 img-fluid" alt="reseñas 1">
+                        <img src="../img/rev1.svg" class="d-block w-100 img-fluid" alt="reseñas 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/review2.png" class="d-block w-100 img-fluid" alt="reseñas 2">
+                        <img src="../img/rev2.svg" class="d-block w-100 img-fluid" alt="reseñas 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/review3.png" class="d-block w-100 img-fluid" alt="reseñas 3">
+                        <img src="../img/rev3.svg" class="d-block w-100 img-fluid" alt="reseñas 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev4.svg" class="d-block w-100 img-fluid" alt="reseñas 4">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev5.svg" class="d-block w-100 img-fluid" alt="reseñas 5">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev6.svg" class="d-block w-100 img-fluid" alt="reseñas 6">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev7.svg" class="d-block w-100 img-fluid" alt="reseñas 7">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev8.svg" class="d-block w-100 img-fluid" alt="reseñas 8">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev9.svg" class="d-block w-100 img-fluid" alt="reseñas 9">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../img/rev10.svg" class="d-block w-100 img-fluid" alt="reseñas 10">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
